add a body and test if the applying the custom properties works as intended

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <title>Gary Resume Refactor</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    Hello
+  </body>
 </html>
