add a main and aside element to the body. Inside of the body, create an unordered list of icons descriping the skills of the applicant. Use the svg files downloaded previously for this project and insert one for each list element

--- a/index.html
+++ b/index.html
@@ -9,6 +9,38 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    Hello
+    <main></main>
+    <aside>
+      <h2 class="visually-hidden">My skills</h2>
+      <ul class="icon-list">
+        <li>
+          <img src="./public/html-icon.svg" alt="html icon" data-decorative />
+        </li>
+        <li>
+          <img src="./public/css-icon.svg" alt="css icon" data-decorative />
+        </li>
+        <li>
+          <img
+            src="./public/sass-icon.svg"
+            alt="sass/scss icon"
+            data-decorative
+          />
+        </li>
+        <li>
+          <img
+            src="./public/javascript-programming-language-icon.svg"
+            alt="javascript icon"
+            data-decorative
+          />
+        </li>
+        <li>
+          <img
+            src="./public/react-js-icon.svg"
+            alt="react icon"
+            data-decorative
+          />
+        </li>
+      </ul>
+    </aside>
   </body>
 </html>
