--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main></main>
+    <main>
+      <p class="eyebrow"></p>
+      <h1 class="page-title"></h1>
+      <p></p>
+    </main>
     <aside>
       <h2 class="visually-hidden">My skills</h2>
       <ul class="icon-list">
