--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <p class="eyebrow"></p>
       <h1 class="page-title"></h1>
-      <p></p>
+      <p class="intro"></p>
     </main>
     <aside>
       <h2 class="visually-hidden">My skills</h2>
