add job experience to the resume page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,46 @@
       <p class="eyebrow"></p>
       <h1 class="page-title"></h1>
       <p class="intro"></p>
+
+      <div class="job-experience">
+        <div class="job">
+          <p class="year">september 2022 - now</p>
+          <div class="job-info">
+            <h2 class="role">Accountants</h2>
+            <span class="companay"
+              >Martinsen Rådgivning & Revision, Bramming</span
+            >
+            <p></p>
+          </div>
+        </div>
+
+        <div class="job">
+          <p class="year">december 2020 - august 2022</p>
+          <div class="job-info">
+            <h2 class="role">Accountant assistant</h2>
+            <span class="companay">Danrevi Bramming</span>
+            <p></p>
+          </div>
+        </div>
+
+        <div class="job">
+          <p class="year">august 2020 - november 2020</p>
+          <div class="job-info">
+            <h2 class="role">Accountant assistant</h2>
+            <span class="companay">Martinsen Rådgivning & Revision, Odder</span>
+            <p></p>
+          </div>
+        </div>
+
+        <div class="job">
+          <p class="year">august 2018 - july 2020</p>
+          <div class="job-info">
+            <h2 class="role">Accountant trainee</h2>
+            <span class="companay">Martinsen Rådgivning & Revision, Odder</span>
+            <p></p>
+          </div>
+        </div>
+      </div>
     </main>
     <aside>
       <h2 class="visually-hidden">My skills</h2>
