fill out job information

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
             <span class="companay"
               >Martinsen Rådgivning & Revision, Bramming</span
             >
-            <p></p>
+            <p>
+              As my client portfolio has grown, I have more report building to
+              do and fewer bookkeeping related tasks. I also assisted clients
+              with COVID-19 compensation packages. Additionally I have assisted
+              with collecting information on all clients in respect to the laws
+              about Anti Money Laundring and Anti Terrorism laws.
+            </p>
           </div>
         </div>
 
@@ -31,7 +37,14 @@
           <div class="job-info">
             <h2 class="role">Accountant assistant</h2>
             <span class="companay">Danrevi Bramming</span>
-            <p></p>
+            <p>
+              Initially this job was more focus on assisting with bookkeeping.
+              Gradually the role evolved into an accountant assistant position
+              where I could apply my previous experience. On top of bookkeeping
+              and annual report building tasks, I also handled tasks related to
+              COVID-19 compensation packages from the Danish Business
+              Authorities.
+            </p>
           </div>
         </div>
 
@@ -40,7 +53,11 @@
           <div class="job-info">
             <h2 class="role">Accountant assistant</h2>
             <span class="companay">Martinsen Rådgivning & Revision, Odder</span>
-            <p></p>
+            <p>
+              This job was a direct continuation of my trainee position. At this
+              point my client portfolio increased and I also got two clients to
+              report wages for on a monthly basis.
+            </p>
           </div>
         </div>
 
@@ -49,7 +66,11 @@
           <div class="job-info">
             <h2 class="role">Accountant trainee</h2>
             <span class="companay">Martinsen Rådgivning & Revision, Odder</span>
-            <p></p>
+            <p>
+              This job involved being trained in basic bookkeeping and annual
+              report building as well as how to report numbers to the Danish Tax
+              and Business Authorities.
+            </p>
           </div>
         </div>
       </div>
