--- a/index.html
+++ b/index.html
@@ -9,103 +9,105 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
-      <p class="eyebrow"></p>
-      <h1 class="page-title"></h1>
-      <p class="intro"></p>
-
-      <div class="job-experience">
-        <div class="job">
-          <p class="year">september 2022 - now</p>
-          <div class="job-info">
-            <h2 class="role">Accountants</h2>
-            <span class="companay"
-              >Martinsen Rådgivning & Revision, Bramming</span
-            >
-            <p>
-              As my client portfolio has grown, I have more report building to
-              do and fewer bookkeeping related tasks. I also assisted clients
-              with COVID-19 compensation packages. Additionally I have assisted
-              with collecting information on all clients in respect to the laws
-              about Anti Money Laundring and Anti Terrorism laws.
-            </p>
+    <div class="main-grid">
+      <main>
+        <p class="eyebrow"></p>
+        <h1 class="page-title"></h1>
+        <p class="intro"></p>
+        <div class="job-experience">
+          <div class="job">
+            <p class="year">september 2022 - now</p>
+            <div class="job-info">
+              <h2 class="role">Accountants</h2>
+              <span class="companay"
+                >Martinsen Rådgivning & Revision, Bramming</span
+              >
+              <p>
+                As my client portfolio has grown, I have more report building to
+                do and fewer bookkeeping related tasks. I also assisted clients
+                with COVID-19 compensation packages. Additionally I have
+                assisted with collecting information on all clients in respect
+                to the laws about Anti Money Laundring and Anti Terrorism laws.
+              </p>
+            </div>
+          </div>
+          <div class="job">
+            <p class="year">december 2020 - august 2022</p>
+            <div class="job-info">
+              <h2 class="role">Accountant assistant</h2>
+              <span class="companay">Danrevi Bramming</span>
+              <p>
+                Initially this job was more focus on assisting with bookkeeping.
+                Gradually the role evolved into an accountant assistant position
+                where I could apply my previous experience. On top of
+                bookkeeping and annual report building tasks, I also handled
+                tasks related to COVID-19 compensation packages from the Danish
+                Business Authorities.
+              </p>
+            </div>
+          </div>
+          <div class="job">
+            <p class="year">august 2020 - november 2020</p>
+            <div class="job-info">
+              <h2 class="role">Accountant assistant</h2>
+              <span class="companay"
+                >Martinsen Rådgivning & Revision, Odder</span
+              >
+              <p>
+                This job was a direct continuation of my trainee position. At
+                this point my client portfolio increased and I also got two
+                clients to report wages for on a monthly basis.
+              </p>
+            </div>
+          </div>
+          <div class="job">
+            <p class="year">august 2018 - july 2020</p>
+            <div class="job-info">
+              <h2 class="role">Accountant trainee</h2>
+              <span class="companay"
+                >Martinsen Rådgivning & Revision, Odder</span
+              >
+              <p>
+                This job involved being trained in basic bookkeeping and annual
+                report building as well as how to report numbers to the Danish
+                Tax and Business Authorities.
+              </p>
+            </div>
           </div>
         </div>
-
-        <div class="job">
-          <p class="year">december 2020 - august 2022</p>
-          <div class="job-info">
-            <h2 class="role">Accountant assistant</h2>
-            <span class="companay">Danrevi Bramming</span>
-            <p>
-              Initially this job was more focus on assisting with bookkeeping.
-              Gradually the role evolved into an accountant assistant position
-              where I could apply my previous experience. On top of bookkeeping
-              and annual report building tasks, I also handled tasks related to
-              COVID-19 compensation packages from the Danish Business
-              Authorities.
-            </p>
-          </div>
-        </div>
-
-        <div class="job">
-          <p class="year">august 2020 - november 2020</p>
-          <div class="job-info">
-            <h2 class="role">Accountant assistant</h2>
-            <span class="companay">Martinsen Rådgivning & Revision, Odder</span>
-            <p>
-              This job was a direct continuation of my trainee position. At this
-              point my client portfolio increased and I also got two clients to
-              report wages for on a monthly basis.
-            </p>
-          </div>
-        </div>
-
-        <div class="job">
-          <p class="year">august 2018 - july 2020</p>
-          <div class="job-info">
-            <h2 class="role">Accountant trainee</h2>
-            <span class="companay">Martinsen Rådgivning & Revision, Odder</span>
-            <p>
-              This job involved being trained in basic bookkeeping and annual
-              report building as well as how to report numbers to the Danish Tax
-              and Business Authorities.
-            </p>
-          </div>
-        </div>
-      </div>
-    </main>
-    <aside>
-      <h2 class="visually-hidden">My skills</h2>
-      <ul class="icon-list">
-        <li>
-          <img src="./public/html-icon.svg" alt="html icon" data-decorative />
-        </li>
-        <li>
-          <img src="./public/css-icon.svg" alt="css icon" data-decorative />
-        </li>
-        <li>
-          <img
-            src="./public/sass-icon.svg"
-            alt="sass/scss icon"
-            data-decorative
-          />
-        </li>
-        <li>
-          <img
-            src="./public/javascript-programming-language-icon.svg"
-            alt="javascript icon"
-            data-decorative
-          />
-        </li>
-        <li>
-          <img
-            src="./public/react-js-icon.svg"
-            alt="react icon"
-            data-decorative
-          />
-        </li>
-      </ul>
-    </aside>
+      </main>
+      <aside>
+        <h2 class="visually-hidden">My skills</h2>
+        <ul class="icon-list">
+          <li>
+            <img src="./public/html-icon.svg" alt="html icon" data-decorative />
+          </li>
+          <li>
+            <img src="./public/css-icon.svg" alt="css icon" data-decorative />
+          </li>
+          <li>
+            <img
+              src="./public/sass-icon.svg"
+              alt="sass/scss icon"
+              data-decorative
+            />
+          </li>
+          <li>
+            <img
+              src="./public/javascript-programming-language-icon.svg"
+              alt="javascript icon"
+              data-decorative
+            />
+          </li>
+          <li>
+            <img
+              src="./public/react-js-icon.svg"
+              alt="react icon"
+              data-decorative
+            />
+          </li>
+        </ul>
+      </aside>
+    </div>
   </body>
 </html>
