--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
   <body>
     <div class="main-grid">
       <main>
-        <p class="eyebrow"></p>
-        <h1 class="page-title"></h1>
-        <p class="intro"></p>
+        <p class="eyebrow">Skills & Experience</p>
+        <h1 class="page-title">My Resume</h1>
+        <p class="intro">
+          As an individual with several years in the accounting business, I have
+          helped countless of small to middle-sized business with registrering
+          financial transactions, interpreting fiancial information and
+          consulting.
+        </p>
         <div class="job-experience">
           <div class="job">
             <p class="year">september 2022 - now</p>
             <div class="job-info">
-              <h2 class="role">Accountants</h2>
+              <h2 class="role">Accountant</h2>
               <span class="companay"
-                >Martinsen Rådgivning & Revision, Bramming</span
+                >Martinsen Consulting & Revision, Bramming</span
               >
               <p>
                 As my client portfolio has grown, I have more report building to
@@ -51,7 +56,7 @@
             <div class="job-info">
               <h2 class="role">Accountant assistant</h2>
               <span class="companay"
-                >Martinsen Rådgivning & Revision, Odder</span
+                >Martinsen Consulting & Revision, Odder</span
               >
               <p>
                 This job was a direct continuation of my trainee position. At
@@ -65,7 +70,7 @@
             <div class="job-info">
               <h2 class="role">Accountant trainee</h2>
               <span class="companay"
-                >Martinsen Rådgivning & Revision, Odder</span
+                >Martinsen Consulting & Revision, Odder</span
               >
               <p>
                 This job involved being trained in basic bookkeeping and annual
