some screen readers will not view unordered lists as lists when list style is set to none. In order to ensure that our element is being interpreted as a list is by adding an attribute to the ul element and set its value to "list"

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </main>
       <aside>
         <h2 class="visually-hidden">My skills</h2>
-        <ul class="icon-list">
+        <ul class="icon-list" role="list">
           <li>
             <img src="./public/html-icon.svg" alt="html icon" data-decorative />
           </li>
