--- a/index.html
+++ b/index.html
@@ -85,15 +85,26 @@
         <h2 class="visually-hidden">My skills</h2>
         <ul class="icon-list" role="list">
           <li>
-            <img src="./public/html-icon.svg" alt="html icon" data-decorative />
+            <img
+              src="./public/html-icon.svg"
+              alt="html icon"
+              class="icon"
+              data-decorative
+            />
           </li>
           <li>
-            <img src="./public/css-icon.svg" alt="css icon" data-decorative />
+            <img
+              src="./public/css-icon.svg"
+              alt="css icon"
+              class="icon"
+              data-decorative
+            />
           </li>
           <li>
             <img
               src="./public/sass-icon.svg"
               alt="sass/scss icon"
+              class="icon"
               data-decorative
             />
           </li>
@@ -101,6 +112,7 @@
             <img
               src="./public/javascript-programming-language-icon.svg"
               alt="javascript icon"
+              class="icon"
               data-decorative
             />
           </li>
@@ -108,6 +120,7 @@
             <img
               src="./public/react-js-icon.svg"
               alt="react icon"
+              class="icon"
               data-decorative
             />
           </li>
