--- a/index.html
+++ b/index.html
@@ -24,60 +24,60 @@
             <p class="year">september 2022 - now</p>
             <div class="job-info">
               <h2 class="role">Accountant</h2>
-              <span class="companay"
+              <span class="company"
                 >Martinsen Consulting & Revision, Bramming</span
               >
-              <p>
-                As my client portfolio has grown, I have more report building to
-                do and fewer bookkeeping related tasks. I also assisted clients
-                with COVID-19 compensation packages. Additionally I have
-                assisted with collecting information on all clients in respect
-                to the laws about Anti Money Laundring and Anti Terrorism laws.
-              </p>
             </div>
+            <p>
+              As my client portfolio has grown, I have more report building to
+              do and fewer bookkeeping related tasks. I also assisted clients
+              with COVID-19 compensation packages. Additionally I have assisted
+              with collecting information on all clients in respect to the laws
+              about Anti Money Laundring and Anti Terrorism laws.
+            </p>
           </div>
           <div class="job">
             <p class="year">december 2020 - august 2022</p>
             <div class="job-info">
               <h2 class="role">Accountant assistant</h2>
-              <span class="companay">Danrevi Bramming</span>
-              <p>
-                Initially this job was more focus on assisting with bookkeeping.
-                Gradually the role evolved into an accountant assistant position
-                where I could apply my previous experience. On top of
-                bookkeeping and annual report building tasks, I also handled
-                tasks related to COVID-19 compensation packages from the Danish
-                Business Authorities.
-              </p>
+              <span class="company">Danrevi Bramming</span>
             </div>
+            <p>
+              Initially this job was more focus on assisting with bookkeeping.
+              Gradually the role evolved into an accountant assistant position
+              where I could apply my previous experience. On top of bookkeeping
+              and annual report building tasks, I also handled tasks related to
+              COVID-19 compensation packages from the Danish Business
+              Authorities.
+            </p>
           </div>
           <div class="job">
             <p class="year">august 2020 - november 2020</p>
             <div class="job-info">
               <h2 class="role">Accountant assistant</h2>
-              <span class="companay"
+              <span class="company"
                 >Martinsen Consulting & Revision, Odder</span
               >
-              <p>
-                This job was a direct continuation of my trainee position. At
-                this point my client portfolio increased and I also got two
-                clients to report wages for on a monthly basis.
-              </p>
             </div>
+            <p>
+              This job was a direct continuation of my trainee position. At this
+              point my client portfolio increased and I also got two clients to
+              report wages for on a monthly basis.
+            </p>
           </div>
           <div class="job">
             <p class="year">august 2018 - july 2020</p>
             <div class="job-info">
               <h2 class="role">Accountant trainee</h2>
-              <span class="companay"
+              <span class="company"
                 >Martinsen Consulting & Revision, Odder</span
               >
-              <p>
-                This job involved being trained in basic bookkeeping and annual
-                report building as well as how to report numbers to the Danish
-                Tax and Business Authorities.
-              </p>
             </div>
+            <p>
+              This job involved being trained in basic bookkeeping and annual
+              report building as well as how to report numbers to the Danish Tax
+              and Business Authorities.
+            </p>
           </div>
         </div>
       </main>
