correct spelling mistakes and formulation

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   <body>
     <div class="main-grid">
       <main>
-        <p class="eyebrow">Skills & Experience</p>
+        <p class="eyebrow">Skills & Experiences</p>
         <h1 class="page-title">My Resume</h1>
         <p class="intro">
-          As an individual with several years in the accounting business, I have
-          helped countless of small to middle-sized business with registrering
+          With my several years of experience in the accounting business, I have
+          helped countless of small to middle-sized businesses with registering
           financial transactions, interpreting fiancial information and
           consulting.
         </p>
         <div class="job-experience">
           <div class="job">
-            <p class="year">september 2022 - now</p>
+            <p class="year">September 2022 - now</p>
             <div class="job-info">
               <h2 class="role">Accountant</h2>
               <span class="company"
@@ -29,21 +29,21 @@
               >
             </div>
             <p>
-              As my client portfolio has grown, I have more report building to
-              do and fewer bookkeeping related tasks. I also assisted clients
-              with COVID-19 compensation packages. Additionally I have assisted
-              with collecting information on all clients in respect to the laws
-              about Anti Money Laundring and Anti Terrorism laws.
+              As my client portfolio grew, my main responsibilities shifted from
+              bookkeeping to report building. Additionally, I assisted clients
+              with COVID-19 compensation packages. Furthermore, I assisted with
+              collecting information on all clients in compliance with
+              money-laundering and anti-terrorism laws.
             </p>
           </div>
           <div class="job">
-            <p class="year">december 2020 - august 2022</p>
+            <p class="year">December 2020 - August 2022</p>
             <div class="job-info">
               <h2 class="role">Accountant assistant</h2>
               <span class="company">Danrevi Bramming</span>
             </div>
             <p>
-              Initially this job was more focus on assisting with bookkeeping.
+              Initially this job was more focused on assisting with bookkeeping.
               Gradually the role evolved into an accountant assistant position
               where I could apply my previous experience. On top of bookkeeping
               and annual report building tasks, I also handled tasks related to
@@ -52,7 +52,7 @@
             </p>
           </div>
           <div class="job">
-            <p class="year">august 2020 - november 2020</p>
+            <p class="year">August 2020 - November 2020</p>
             <div class="job-info">
               <h2 class="role">Accountant assistant</h2>
               <span class="company"
@@ -61,12 +61,12 @@
             </div>
             <p>
               This job was a direct continuation of my trainee position. At this
-              point my client portfolio increased and I also got two clients to
-              report wages for on a monthly basis.
+              point my client portfolio increased. My responsibilities included
+              reporting wages for two clients on a monthly basis.
             </p>
           </div>
           <div class="job">
-            <p class="year">august 2018 - july 2020</p>
+            <p class="year">August 2018 - July 2020</p>
             <div class="job-info">
               <h2 class="role">Accountant trainee</h2>
               <span class="company"
@@ -74,9 +74,9 @@
               >
             </div>
             <p>
-              This job involved being trained in basic bookkeeping and annual
-              report building as well as how to report numbers to the Danish Tax
-              and Business Authorities.
+              This job involved being trained in basic bookkeeping principles,
+              annual report building, and how to report numbers to the Danish
+              Tax and Business Authorities and more.
             </p>
           </div>
         </div>
