--- a/dk/index.html
+++ b/dk/index.html
@@ -86,7 +86,7 @@
         <ul class="icon-list" role="list">
           <li>
             <img
-              src="./public/html-icon.svg"
+              src="../public/html-icon.svg"
               alt="html icon"
               class="icon"
               data-decorative
@@ -94,7 +94,7 @@
           </li>
           <li>
             <img
-              src="./public/css-icon.svg"
+              src="../public/css-icon.svg"
               alt="css icon"
               class="icon"
               data-decorative
@@ -102,7 +102,7 @@
           </li>
           <li>
             <img
-              src="./public/sass-icon.svg"
+              src="../public/sass-icon.svg"
               alt="sass/scss icon"
               class="icon"
               data-decorative
@@ -110,7 +110,7 @@
           </li>
           <li>
             <img
-              src="./public/javascript-programming-language-icon.svg"
+              src="../public/javascript-programming-language-icon.svg"
               alt="javascript icon"
               class="icon"
               data-decorative
@@ -118,7 +118,7 @@
           </li>
           <li>
             <img
-              src="./public/react-js-icon.svg"
+              src="../public/react-js-icon.svg"
               alt="react icon"
               class="icon"
               data-decorative
