--- a/dk/index.html
+++ b/dk/index.html
@@ -11,78 +11,80 @@
   <body>
     <div class="main-grid">
       <main>
-        <p class="eyebrow">Skills & Experiences Danske Edition</p>
-        <h1 class="page-title">My Resume</h1>
+        <p class="eyebrow">Færdigheder & Erfaringer</p>
+        <h1 class="page-title">Min jobansøgning</h1>
         <p class="intro">
-          With my several years of experience in the accounting business, I have
-          helped countless of small to middle-sized businesses with registering
-          financial transactions, interpreting fiancial information and
-          consulting.
+          Med mine mange års erfaring i regnskabsbranchen har jeg hjulpet
+          utallige små og mellemstore virksomheder med registrering af
+          finansielle transaktioner, fortolkning af finansielle oplysninger og
+          rådgivning.
         </p>
         <div class="job-experience">
           <div class="job">
             <p class="year">September 2022 - now</p>
             <div class="job-info">
-              <h2 class="role">Accountant</h2>
+              <h2 class="role">Revisor</h2>
               <span class="company"
-                >Martinsen Consulting & Revision, Bramming</span
+                >Martinsen Rådgivning & Revision, Bramming</span
               >
             </div>
             <p>
-              As my client portfolio grew, my main responsibilities shifted from
-              bookkeeping to report building. Additionally, I assisted clients
-              with COVID-19 compensation packages. Furthermore, I assisted with
-              collecting information on all clients in compliance with
-              money-laundering and anti-terrorism laws.
+              Efterhånden som min kundeportefølje voksede, skiftede mit
+              hovedansvar fra bogholderi til regnskabsopstilling. Derudover
+              assisterede jeg klienter med COVID-19-kompensationspakker. Desuden
+              hjalp jeg med indsamle oplysninger om alle kunder i
+              overensstemmelse med lovgivning om forebyggelse af hvidvask og
+              finansiering af terrorisme.
             </p>
           </div>
           <div class="job">
             <p class="year">December 2020 - August 2022</p>
             <div class="job-info">
-              <h2 class="role">Accountant assistant</h2>
+              <h2 class="role">Revisorassistant</h2>
               <span class="company">Danrevi Bramming</span>
             </div>
             <p>
-              Initially this job was more focused on assisting with bookkeeping.
-              Gradually the role evolved into an accountant assistant position
-              where I could apply my previous experience. On top of bookkeeping
-              and annual report building tasks, I also handled tasks related to
-              COVID-19 compensation packages from the Danish Business
-              Authorities.
+              Oprindeligt var dette job mere fokuseret på at hjælpe med
+              bogføring. Efterhånden udviklede rollen sig til en stilling som
+              revisorassistent, hvor jeg kunne bruge min tidligere erfaring. Ud
+              over bogholderi og opbygning af årsrapporter, håndterede jeg også
+              opgaver relateret til COVID-19-kompensationspakker fra
+              Erhvervsstyrelsen.
             </p>
           </div>
           <div class="job">
             <p class="year">August 2020 - November 2020</p>
             <div class="job-info">
-              <h2 class="role">Accountant assistant</h2>
+              <h2 class="role">Revisorassistant</h2>
               <span class="company"
-                >Martinsen Consulting & Revision, Odder</span
+                >Martinsen Rådgivning & Revision, Odder</span
               >
             </div>
             <p>
-              This job was a direct continuation of my trainee position. At this
-              point my client portfolio increased. My responsibilities included
-              reporting wages for two clients on a monthly basis.
+              Dette job var en direkte fortsættelse af min elevstilling. På
+              dette tidspunkt voksede min kundeportefølje. Mine ansvarsområder
+              omfattede desuden at indberette lønninger for to kunder på
+              månedsbasis.
             </p>
           </div>
           <div class="job">
-            <p class="year">August 2018 - July 2020</p>
+            <p class="year">August 2018 - Juli 2020</p>
             <div class="job-info">
-              <h2 class="role">Accountant trainee</h2>
+              <h2 class="role">Revisorelev</h2>
               <span class="company"
-                >Martinsen Consulting & Revision, Odder</span
+                >Martinsen Rådgivning & Revision, Odder</span
               >
             </div>
             <p>
-              This job involved being trained in basic bookkeeping principles,
-              annual report building, and how to report numbers to the Danish
-              Tax and Business Authorities and more.
+              Dette job indebar at blive oplært i grundlæggende
+              bogføringsprincipper, opstilling af årsrapporter, og hvordan man
+              indberetter tal til Skattestyrelsen og Erhvervsstyrelsen m.m.
             </p>
           </div>
         </div>
       </main>
       <aside>
-        <h2 class="visually-hidden">My skills</h2>
+        <h2 class="visually-hidden">Mine færdigheder</h2>
         <ul class="icon-list" role="list">
           <li>
             <img
