change page title

--- a/dk/index.html
+++ b/dk/index.html
@@ -12,7 +12,7 @@
     <div class="main-grid">
       <main>
         <p class="eyebrow">Færdigheder & Erfaringer</p>
-        <h1 class="page-title">Min jobansøgning</h1>
+        <h1 class="page-title">Mit CV</h1>
         <p class="intro">
           Med mine mange års erfaring i regnskabsbranchen har jeg hjulpet
           utallige små og mellemstore virksomheder med registrering af
