--- a/dk/index.html
+++ b/dk/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="../main.js"></script>
-    <title>Gary Resume Refactor</title>
+    <title>Maria's CV</title>
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
