--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </p>
         <div class="job-experience">
           <div class="job">
-            <p class="year">September 2022 - now</p>
+            <p class="year">September 2022 - 2023</p>
             <div class="job-info">
               <h2 class="role">Accountant</h2>
               <span class="company"
