Instead of using a pseudo element which is impractical when creating a website of multple languages, use a p element inside of .job-experience to highlight the most resent role

--- a/dk/index.html
+++ b/dk/index.html
@@ -20,66 +20,69 @@
           rådgivning.
         </p>
         <div class="job-experience">
-          <div class="job">
-            <p class="year">September 2022 - 2023</p>
-            <div class="job-info">
-              <h2 class="role">Revisor</h2>
-              <span class="company"
-                >Martinsen Rådgivning & Revision, Bramming</span
-              >
+          <p class="current-title">Seneste stilling</p>
+          <div class="jobs">
+            <div class="job">
+              <p class="year">September 2022 - 2023</p>
+              <div class="job-info">
+                <h2 class="role">Revisor</h2>
+                <span class="company"
+                  >Martinsen Rådgivning & Revision, Bramming</span
+                >
+              </div>
+              <p>
+                Efterhånden som min kundeportefølje voksede, skiftede mit
+                hovedansvar fra bogholderi til regnskabsopstilling. Derudover
+                assisterede jeg klienter med COVID-19-kompensationspakker.
+                Desuden hjalp jeg med indsamle oplysninger om alle kunder i
+                overensstemmelse med lovgivning om forebyggelse af hvidvask og
+                finansiering af terrorisme.
+              </p>
             </div>
-            <p>
-              Efterhånden som min kundeportefølje voksede, skiftede mit
-              hovedansvar fra bogholderi til regnskabsopstilling. Derudover
-              assisterede jeg klienter med COVID-19-kompensationspakker. Desuden
-              hjalp jeg med indsamle oplysninger om alle kunder i
-              overensstemmelse med lovgivning om forebyggelse af hvidvask og
-              finansiering af terrorisme.
-            </p>
-          </div>
-          <div class="job">
-            <p class="year">December 2020 - August 2022</p>
-            <div class="job-info">
-              <h2 class="role">Revisorassistant</h2>
-              <span class="company">Danrevi Bramming</span>
+            <div class="job">
+              <p class="year">December 2020 - August 2022</p>
+              <div class="job-info">
+                <h2 class="role">Revisorassistant</h2>
+                <span class="company">Danrevi Bramming</span>
+              </div>
+              <p>
+                Oprindeligt var dette job mere fokuseret på at hjælpe med
+                bogføring. Efterhånden udviklede rollen sig til en stilling som
+                revisorassistent, hvor jeg kunne bruge min tidligere erfaring.
+                Ud over bogholderi og opbygning af årsrapporter, håndterede jeg
+                også opgaver relateret til COVID-19-kompensationspakker fra
+                Erhvervsstyrelsen.
+              </p>
             </div>
-            <p>
-              Oprindeligt var dette job mere fokuseret på at hjælpe med
-              bogføring. Efterhånden udviklede rollen sig til en stilling som
-              revisorassistent, hvor jeg kunne bruge min tidligere erfaring. Ud
-              over bogholderi og opbygning af årsrapporter, håndterede jeg også
-              opgaver relateret til COVID-19-kompensationspakker fra
-              Erhvervsstyrelsen.
-            </p>
-          </div>
-          <div class="job">
-            <p class="year">August 2020 - November 2020</p>
-            <div class="job-info">
-              <h2 class="role">Revisorassistant</h2>
-              <span class="company"
-                >Martinsen Rådgivning & Revision, Odder</span
-              >
+            <div class="job">
+              <p class="year">August 2020 - November 2020</p>
+              <div class="job-info">
+                <h2 class="role">Revisorassistant</h2>
+                <span class="company"
+                  >Martinsen Rådgivning & Revision, Odder</span
+                >
+              </div>
+              <p>
+                Dette job var en direkte fortsættelse af min elevstilling. På
+                dette tidspunkt voksede min kundeportefølje. Mine ansvarsområder
+                omfattede desuden at indberette lønninger for to kunder på
+                månedsbasis.
+              </p>
             </div>
-            <p>
-              Dette job var en direkte fortsættelse af min elevstilling. På
-              dette tidspunkt voksede min kundeportefølje. Mine ansvarsområder
-              omfattede desuden at indberette lønninger for to kunder på
-              månedsbasis.
-            </p>
-          </div>
-          <div class="job">
-            <p class="year">August 2018 - Juli 2020</p>
-            <div class="job-info">
-              <h2 class="role">Revisorelev</h2>
-              <span class="company"
-                >Martinsen Rådgivning & Revision, Odder</span
-              >
+            <div class="job">
+              <p class="year">August 2018 - Juli 2020</p>
+              <div class="job-info">
+                <h2 class="role">Revisorelev</h2>
+                <span class="company"
+                  >Martinsen Rådgivning & Revision, Odder</span
+                >
+              </div>
+              <p>
+                Dette job indebar at blive oplært i grundlæggende
+                bogføringsprincipper, opstilling af årsrapporter, og hvordan man
+                indberetter tal til Skattestyrelsen og Erhvervsstyrelsen m.m.
+              </p>
             </div>
-            <p>
-              Dette job indebar at blive oplært i grundlæggende
-              bogføringsprincipper, opstilling af årsrapporter, og hvordan man
-              indberetter tal til Skattestyrelsen og Erhvervsstyrelsen m.m.
-            </p>
           </div>
         </div>
       </main>
