--- a/index.html
+++ b/index.html
@@ -20,64 +20,67 @@
           consulting.
         </p>
         <div class="job-experience">
-          <div class="job">
-            <p class="year">September 2022 - 2023</p>
-            <div class="job-info">
-              <h2 class="role">Accountant</h2>
-              <span class="company"
-                >Martinsen Consulting & Revision, Bramming</span
-              >
+          <p class="current-title">Current role</p>
+          <div class="jobs">
+            <div class="job">
+              <p class="year">September 2022 - 2023</p>
+              <div class="job-info">
+                <h2 class="role">Accountant</h2>
+                <span class="company"
+                  >Martinsen Consulting & Revision, Bramming</span
+                >
+              </div>
+              <p>
+                As my client portfolio grew, my main responsibilities shifted
+                from bookkeeping to report building. Additionally, I assisted
+                clients with COVID-19 compensation packages. Furthermore, I
+                assisted with collecting information on all clients in
+                compliance with money-laundering and anti-terrorism laws.
+              </p>
             </div>
-            <p>
-              As my client portfolio grew, my main responsibilities shifted from
-              bookkeeping to report building. Additionally, I assisted clients
-              with COVID-19 compensation packages. Furthermore, I assisted with
-              collecting information on all clients in compliance with
-              money-laundering and anti-terrorism laws.
-            </p>
-          </div>
-          <div class="job">
-            <p class="year">December 2020 - August 2022</p>
-            <div class="job-info">
-              <h2 class="role">Accountant assistant</h2>
-              <span class="company">Danrevi Bramming</span>
+            <div class="job">
+              <p class="year">December 2020 - August 2022</p>
+              <div class="job-info">
+                <h2 class="role">Accountant assistant</h2>
+                <span class="company">Danrevi Bramming</span>
+              </div>
+              <p>
+                Initially this job was more focused on assisting with
+                bookkeeping. Gradually the role evolved into an accountant
+                assistant position where I could apply my previous experience.
+                On top of bookkeeping and annual report building tasks, I also
+                handled tasks related to COVID-19 compensation packages from the
+                Danish Business Authorities.
+              </p>
             </div>
-            <p>
-              Initially this job was more focused on assisting with bookkeeping.
-              Gradually the role evolved into an accountant assistant position
-              where I could apply my previous experience. On top of bookkeeping
-              and annual report building tasks, I also handled tasks related to
-              COVID-19 compensation packages from the Danish Business
-              Authorities.
-            </p>
-          </div>
-          <div class="job">
-            <p class="year">August 2020 - November 2020</p>
-            <div class="job-info">
-              <h2 class="role">Accountant assistant</h2>
-              <span class="company"
-                >Martinsen Consulting & Revision, Odder</span
-              >
+            <div class="job">
+              <p class="year">August 2020 - November 2020</p>
+              <div class="job-info">
+                <h2 class="role">Accountant assistant</h2>
+                <span class="company"
+                  >Martinsen Consulting & Revision, Odder</span
+                >
+              </div>
+              <p>
+                This job was a direct continuation of my trainee position. At
+                this point my client portfolio increased. My responsibilities
+                included reporting wages for two clients on a monthly basis.
+              </p>
             </div>
-            <p>
-              This job was a direct continuation of my trainee position. At this
-              point my client portfolio increased. My responsibilities included
-              reporting wages for two clients on a monthly basis.
-            </p>
-          </div>
-          <div class="job">
-            <p class="year">August 2018 - July 2020</p>
-            <div class="job-info">
-              <h2 class="role">Accountant trainee</h2>
-              <span class="company"
-                >Martinsen Consulting & Revision, Odder</span
-              >
+            <div class="job">
+              <p class="year">August 2018 - July 2020</p>
+              <div class="job-info">
+                <h2 class="role">Accountant trainee</h2>
+                <span class="company"
+                  >Martinsen Consulting & Revision, Odder</span
+                >
+              </div>
+              <p>
+                This job involved being trained in basic bookkeeping principles,
+                annual report building, and how to report numbers to the Danish
+                Tax and Business Authorities and more.
+              </p>
             </div>
-            <p>
-              This job involved being trained in basic bookkeeping principles,
-              annual report building, and how to report numbers to the Danish
-              Tax and Business Authorities and more.
-            </p>
           </div>
         </div>
       </main>
