--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p class="current-title">Current role</p>
           <div class="jobs">
             <div class="job">
-              <p class="year">September 2022 - 2023</p>
+              <p class="year">September 2022 - September 2023</p>
               <div class="job-info">
                 <h2 class="role">Accountant</h2>
                 <span class="company"
